--- a/disco.html
+++ b/disco.html
@@ -68,7 +68,7 @@
         </div>
         <div class="carousel-item crepa">
           <a target="_blank" class="link" href="https://www.instagram.com/lacrepa.disco/">LA CREPA DISCO</a>
-          <img class="club" src="immagini/disco/crepa.jpg" alt="">
+          <img class="club" src="immagini/Disco/Crepa.jpg" alt="">
           <p class="specifico">La Crepa è una discoteca-ristorante che si trova nella zona di tre Olmi, un piccolo paese immerso nella campagna di Modena. 
               La programmazione musicale del locale cambia molto in base alle serate ma i generi musicali prevalenti sono: house, house commerciale e techno</p>
         </div>
